force-app/main/default/objects/Api_Logger__c/Api_Logger__c.object-meta.xml
<CustomObject>
    <label>Api Logger</label>
    <nameField>
        <displayFormat>APIL-{0000000000}</displayFormat>
        <label>Api Logger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Api Logger</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>