force-app/main/default/objects/Api_Logger__c/fields/Api_Type__c.field-meta.xml
<CustomField>
    <fullName>Api_Type__c</fullName>
    <label>Api Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REST</fullName>
            </value>
            <value>
                <fullName>WEBSERVICE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>