force-app/main/default/objects/Api_Logger__c/fields/End_Point__c.field-meta.xml
<CustomField>
    <fullName>End_Point__c</fullName>
    <label>End Point</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>