force-app/main/default/objects/Api_Logger__c/fields/Sobject__c.field-meta.xml
<CustomField>
    <fullName>Sobject__c</fullName>
    <label>Sobject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>