force-app/main/default/objects/Api_Logger__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Source__c</columns>
    <columns>Status__c</columns>
    <columns>Status_Code__c</columns>
    <columns>LOB__c</columns>
    <columns>Api_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>