force-app/main/default/objects/Api_Logger__c/listViews/Dedupe_Check.listView-meta.xml
<ListView>
    <fullName>Dedupe_Check</fullName>
    <columns>NAME</columns>
    <columns>Source__c</columns>
    <columns>LOB__c</columns>
    <columns>Api_Type__c</columns>
    <columns>Status_Code__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Class_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>DEDUPE API</value>
    </filters>
    <label>Dedupe Check</label>
</ListView>